Extracting getAntecendentWithAllContexts